--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon ./start.js"
   },
   "repository": {
     "type": "git",
@@ -15,16 +16,25 @@
   "bugs": {
     "url": "https://github.com/Tabben/book-collection-api/issues"
   },
-  "homepage": "https://github.com/Tabben/book-collection-api#readme",
+  "homepage": "https://github.com/Tabben/book-collection-api",
   "dependencies": {
+    "@babel/cli": "^7.13.16",
+    "@babel/core": "^7.14.0",
+    "@babel/preset-env": "^7.14.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "chai": "^4.3.4",
     "chai-http": "^4.3.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mocha": "^8.3.2",
-    "mongoose": "^5.12.5",
+    "mongodb": "^3.6.6",
+    "mongoose": "^5.12.7",
     "nedb": "^1.8.0",
     "passport": "^0.4.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
