--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./start.js"
+    "test": "cross-env ENVIROMENT=TEST && mocha --recursive --exit --timeout 15000",
+    "start": "cross-env ENVIROMENT=dev && nodemon start.js"
   },
   "repository": {
     "type": "git",
@@ -26,15 +26,16 @@
     "chai": "^4.3.4",
     "chai-http": "^4.3.0",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mocha": "^8.3.2",
     "mongodb": "^3.6.6",
-    "mongoose": "^5.12.7",
-    "nedb": "^1.8.0",
-    "passport": "^0.4.1"
+    "mongoose": "^5.12.7"
   },
   "devDependencies": {
+    "mongodb-memory-server": "^6.9.6",
     "nodemon": "^2.0.7"
   }
 }
